[gd_scene load_steps=2 format=3 uid="uid://b4fk84k7nqivt"]

[ext_resource type="Script" path="res://UI/DeathWindow/death_window.gd" id="1_pr333"]

[node name="DeathWindow" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -124.5
offset_right = 223.0
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pr333")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.48179, 0.481789, 0.481789, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RestartGame" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Restart game"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="GoToTestMainScene" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Go to Test Main"

[node name="GoToMainScene" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Go to Main"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Exit
"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartGame" to="." method="_on_restart_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
